--- a/code/java/troop/static/client/estimates.html
+++ b/code/java/troop/static/client/estimates.html
@@ -137,20 +137,20 @@
         <h1 style="text-align: center; line-height: 75px;"> Get Repair Estimates</h1>
         <p style="text-align: center; font-size: 23px;"> Select repairs from the dropdown to generate an estimate of the total cost.</p>
         <form style="text-align: center;" action="/get-estimates" method="GET">
-            <label class="container">One
-                <input style="position: relative; right: 5%;" type="checkbox" checked="checked">
+            <label class="container">Brakes
+                <input type="checkbox" name="repair1" value="brakes">
                 <span class="checkmark"></span>
               </label>
-              <label class="container">Two
-                <input type="checkbox">
+              <label class="container">Transmission
+                <input type="checkbox" name="repair2" value="transmission">
                 <span class="checkmark"></span>
               </label>
-              <label class="container">Three
-                <input type="checkbox">
+              <label class="container">Engine
+                <input type="checkbox" name="repair3" value="engine">
                 <span class="checkmark"></span>
               </label>
-              <label class="container">Four
-                <input type="checkbox">
+              <label class="container">Flywheel
+                <input type="checkbox" name="repair4" value="flywheel">
                 <span class="checkmark"></span>
               </label>
               <input type="submit" value="Submit">
